--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,34 +7,19 @@
 
     <!-- Navigation Drawer menu labels -->
     <string name="nav_online">Where is my bus?</string>
-    <string name="nav_stars">STARS Schedule</string>
+    <string name="nav_offline">Offline Schedule</string>
     <string name="nav_help">Help</string>
-    <string name="nav_settings">Settings</string>
 
 
     <!-- Toolbar titles when navigation menu item is selected -->
     <string-array name="nav_item_activity_titles">
         <item>Where is my bus?</item>
-        <item>STARS Schedule</item>
+        <item>Offline Schedule</item>
         <item>Help</item>
-        <item>Settings</item>
-    </string-array>
-
-    <string-array name="bus_spinner">
-        <item>Main Campus</item>
-        <item>East Campus</item>
-        <item>Main - East Campus Ring</item>
-        <item>Main Campus Ring</item>
-        <item>Regional Services</item>
     </string-array>
 
     <string-array name="ours">
         <item>TMD</item>
         <item>SMD</item>
-        <item>Main - East Campus Ring</item>
     </string-array>
-
-    <string name="custom_notification">Have a nice ride!</string>
-    <string name="activity_title_about_us">About Us</string>
-    <string name="collapsed">Have a nice ride! \nCreated at: %s</string>
 </resources>
